; ModuleID = '/home/carl/AnghaBench/freebsd/stand/common/extr_md.c_md_close.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/common/extr_md.c_md_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.open_file = type { i64 }
%struct.devdesc = type { i64 }

@ENXIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.open_file*)* @md_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @md_close(%struct.open_file* %0) #0 {
  %2 = alloca %struct.open_file*, align 8
  %3 = alloca %struct.devdesc*, align 8
  store %struct.open_file* %0, %struct.open_file** %2, align 8
  %4 = load %struct.open_file*, %struct.open_file** %2, align 8
  %5 = getelementptr inbounds %struct.open_file, %struct.open_file* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to %struct.devdesc*
  store %struct.devdesc* %7, %struct.devdesc** %3, align 8
  %8 = load %struct.devdesc*, %struct.devdesc** %3, align 8
  %9 = getelementptr inbounds %struct.devdesc, %struct.devdesc* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = load i32, i32* @ENXIO, align 4
  br label %15

14:                                               ; preds = %1
  br label %15

15:                                               ; preds = %14, %12
  %16 = phi i32 [ %13, %12 ], [ 0, %14 ]
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
